--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click-plugins==1.1.1
 colorama==0.4.6
 filelock==3.18.0
 idna==3.10
+python-dotenv==1.1.0
 requests==2.32.3
 requests-file==2.1.0
 shodan==1.31.0
