--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,11 @@ click-plugins==1.1.1
 colorama==0.4.6
 filelock==3.18.0
 idna==3.10
-python-dotenv==1.1.0
+python-dateutil==2.9.0.post0
+python-whois==0.9.5
 requests==2.32.3
 requests-file==2.1.0
-shodan==1.31.0
+six==1.17.0
 tldextract==5.3.0
 urllib3==2.4.0
 XlsxWriter==3.2.3
