--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.13.4
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
@@ -10,6 +11,8 @@ python-whois==0.9.5
 requests==2.32.3
 requests-file==2.1.0
 six==1.17.0
+soupsieve==2.7
 tldextract==5.3.0
+typing_extensions==4.14.1
 urllib3==2.4.0
 XlsxWriter==3.2.3
